traces/bug_41.txt
/home/runner/work/42sh-infer/42sh-infer/lib/json/src/parse/types.c:37: error: DEAD_STORE
  The value written to &cidx (type int) is never used.
Showing all 1 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/lib/json/src/parse/types.c:37:5: Write of unused value
35.           {"-0123456789.", JSON_NUMBER}, {"\"'", JSON_STRING}};
36.       int tabidx = -1;
37.       int cidx = -1;
          ^
38.       int len;
39.   
